--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "redis-queue",
+  "name": "reliable-redis-queue",
   "version": "0.1.0",
   "description": "A reliabile queue using Redis",
   "main": "index.js",
@@ -13,7 +13,7 @@
     "node"
   ],
   "author": "Bashar Al-Rawi <basharal@live.com>",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "bluebird": "^2.10.0",
     "redis": "^1.0.0"
@@ -21,5 +21,17 @@
   "devDependencies": {
     "chai": "^3.2.0",
     "chai-as-promised": "^5.1.0"
-  }
+  },
+  "directories": {
+    "doc": "docs",
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/basharal/redis-queue.git"
+  },
+  "bugs": {
+    "url": "https://github.com/basharal/redis-queue/issues"
+  },
+  "homepage": "https://github.com/basharal/redis-queue#readme"
 }
