--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reliable-redis-queue",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "A reliabile queue using Redis",
   "main": "index.js",
   "scripts": {
@@ -16,7 +16,9 @@
   "license": "MIT",
   "dependencies": {
     "bluebird": "^2.10.0",
-    "redis": "^1.0.0"
+    "hiredis": "^0.4.1",
+    "redis": "^1.0.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "chai": "^3.2.0",
